load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "concurrency_lib",
    srcs = ["concurrency.go"],
    importpath = "github.com/terrencemiao/golang/examples/concurrency",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "concurrency",
    embed = [":concurrency_lib"],
    visibility = ["//visibility:public"],
)
