load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fibonacci_lib",
    srcs = ["fibonacci.go"],
    importpath = "github.com/terrencemiao/golang/examples/fibonacci",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "fibonacci",
    embed = [":fibonacci_lib"],
    visibility = ["//visibility:public"],
)
