load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "hello_proto",
    srcs = [
        "hello.proto",
        "hello_service.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//protos/common:common_proto"],
)

go_proto_library(
    name = "hello_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/terrencemiao/golang/protos/hello",
    proto = ":hello_proto",
    visibility = ["//visibility:public"],
    deps = ["//protos/common"],
)

go_library(
    name = "hello",
    embed = [":hello_go_proto"],
    importpath = "github.com/terrencemiao/golang/protos/hello",
    visibility = ["//visibility:public"],
)
