load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello_lib",
    srcs = ["main.go"],
    importpath = "github.com/terrencemiao/golang/services/hello",
    visibility = ["//visibility:private"],
    deps = [
        "//protos/hello",
        "//services/hello/server",
        "@com_github_jessevdk_go_flags//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)
