load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "hello_lib",
    srcs = ["main.go"],
    importpath = "github.com/terrencemiao/golang/services/hello",
    visibility = ["//visibility:private"],
    deps = [
        "//protos/hello",
        "//services/hello/server",
        "@com_github_jessevdk_go_flags//:go-flags",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "base_image",
    srcs = ["main.go"],
    goarch = "amd64",
    goos = "linux",
    importpath = "github.com/terrencemiao/golang/services/hello",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/hello",
        "//services/hello/server",
        "@com_github_jessevdk_go_flags//:go-flags",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

container_image(
    name = "image",
    base = ":base_image",
    stamp = True,
    visibility = ["//visibility:public"],
)
