load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/terrencemiao/golang/services/hello/server",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/common",
        "//protos/hello",
    ],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    embed = [":server"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)
